{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 46,
  "lineage": "48397c1e-cd8b-0ce0-321c-f81ee04ba6a1",
  "resources": [
    {
      "module": "module.ec2_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "base_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01d6ecabaf6c75836",
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:instance/i-0a0d98cc2f5dd031d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "multi_region_spot-dev-ec2-ebs-profile",
            "id": "i-0a0d98cc2f5dd031d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "multi_region_spot-dev-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b076cc7b550b0a4c"
              }
            ],
            "primary_network_interface_id": "eni-0b076cc7b550b0a4c",
            "private_dns": "ip-192-168-1-91.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.91",
            "public_dns": "ec2-54-238-83-218.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.238.83.218",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d418fe6e6241e160",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3ee1a2c35b8c3fe",
            "tags": {
              "Env": "dev",
              "Name": "multi_region_spot-dev-ondemand-db",
              "Project": "multi_region_spot",
              "Type": "ondemand"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "multi_region_spot-dev-ondemand-db",
              "Project": "multi_region_spot",
              "Type": "ondemand"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015e7fd742db8dfd7"
            ]
          },
          "dependencies": [
            "module.ec2_server.aws_iam_instance_profile.ec2_ebs_profile",
            "module.ec2_server.aws_iam_role.ec2_ebs_role",
            "module.ec2_server.aws_key_pair.keypair",
            "module.ec2_server.aws_security_group.db_sg",
            "module.ec2_server.data.aws_ami.al2023",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:security-group/sg-015e7fd742db8dfd7",
            "description": "Security group for DB server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015e7fd742db8dfd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "multi_region_spot-dev-db-sg",
            "name_prefix": "",
            "owner_id": "058898200941",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07e4c73827badbcc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:internet-gateway/igw-0b53bfb46c0f0bef3",
            "id": "igw-0b53bfb46c0f0bef3",
            "owner_id": "058898200941",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi_region_spot-dev-igw",
              "Project": "multi_region_spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi_region_spot-dev-igw",
              "Project": "multi_region_spot"
            },
            "vpc_id": "vpc-07e4c73827badbcc0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b53bfb46c0f0bef3",
            "id": "r-rtb-078610118db48b9811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-078610118db48b981",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:route-table/rtb-078610118db48b981",
            "id": "rtb-078610118db48b981",
            "owner_id": "058898200941",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "multi_region_spot-dev-public-route-table",
              "Project": "multi_region_spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi_region_spot-dev-public-route-table",
              "Project": "multi_region_spot"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e4c73827badbcc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc62eed5d4aac5e2",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-078610118db48b981",
            "subnet_id": "subnet-0f3ee1a2c35b8c3fe"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0640395b8639a3d13",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-078610118db48b981",
            "subnet_id": "subnet-0d16d1d522f148776"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:subnet/subnet-0f3ee1a2c35b8c3fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3ee1a2c35b8c3fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi_region_spot-dev-public-subnet-1",
              "Project": "multi_region_spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi_region_spot-dev-public-subnet-1",
              "Project": "multi_region_spot",
              "Type": "public"
            },
            "vpc_id": "vpc-07e4c73827badbcc0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:subnet/subnet-0d16d1d522f148776",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d16d1d522f148776",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi_region_spot-dev-public-subnet-2",
              "Project": "multi_region_spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi_region_spot-dev-public-subnet-2",
              "Project": "multi_region_spot",
              "Type": "public"
            },
            "vpc_id": "vpc-07e4c73827badbcc0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:vpc/vpc-07e4c73827badbcc0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0f7a51578910ccbe9",
            "default_route_table_id": "rtb-016cf5c61d7208105",
            "default_security_group_id": "sg-0201800c78dcffaa3",
            "dhcp_options_id": "dopt-64708a0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e4c73827badbcc0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016cf5c61d7208105",
            "owner_id": "058898200941",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi_region_spot-dev-vpc",
              "Project": "multi_region_spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi_region_spot-dev-vpc",
              "Project": "multi_region_spot"
            }
          }
        }
      ]
    }
  ]
}